add logo in index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <header>
-    <h1 id="logo">dev.finance$</h1>
+    <img id="logo" src="assets/logo.svg" alt="Logo App Finance">
   </header>
 
   <main class="container">
